# rope

./: .gitignore  CLAUDE_AI_DEPLOYMENT_REPORT_2026-01-24.md  CLAUDE_CODE_AUDIT_REPORT.md  Cargo.toml  IMPLEMENTATION_REPORT_2026-01-24.md  README.md  rope.example.toml
.cursor/rules/: no-cursor-coauthor.mdc
.github/workflows/: ci.yml  security.yml
bootstrap-keys/: node.id  node.pub
config/networks/: mainnet.json  testnet.json
contracts/: foundry.toml  hardhat.config.ts  package.json
contracts/scripts/: Deploy.s.sol  deploy.ts
contracts/src/agents/: AgentReputation.sol
contracts/src/governance/: DatachainDAO.sol  Treasury.sol
crates/rope-agent-runtime/: Cargo.toml
crates/rope-agent-runtime/src/: config.rs  error.rs  identity.rs  intent.rs  lattice_client.rs  lib.rs  memory.rs  runtime.rs
crates/rope-agent-runtime/src/agents/: mod.rs  personal.rs
crates/rope-agent-runtime/src/ai/: alteros.rs  mod.rs  model.rs  prompt.rs  provider.rs
crates/rope-agent-runtime/src/channels/: mod.rs  router.rs
crates/rope-agent-runtime/src/sandbox/: mod.rs
crates/rope-agent-runtime/src/security/: mod.rs  rate_limiter.rs  validation.rs
crates/rope-agent-runtime/src/skills/: mod.rs
crates/rope-agent-runtime/src/websocket/: mod.rs
crates/rope-benchmarks/: Cargo.toml
crates/rope-benchmarks/benches/: consensus_benchmarks.rs  crypto_benchmarks.rs  full_system_benchmarks.rs  network_benchmarks.rs  string_benchmarks.rs
crates/rope-benchmarks/src/: lib.rs
crates/rope-bridge/: Cargo.toml
crates/rope-bridge/src/: evm_invocation.rs  lib.rs
crates/rope-cli/: Cargo.toml
crates/rope-cli/src/: main.rs
crates/rope-consensus/: Cargo.toml
crates/rope-consensus/src/: ai_testimony.rs  anchor.rs  finality_engine.rs  lib.rs  testimony.rs  virtual_voting_impl.rs
crates/rope-core/: Cargo.toml
crates/rope-core/src/: clock.rs  complement.rs  error.rs  lattice.rs  lib.rs  nucleotide.rs  string.rs  types.rs
crates/rope-crypto/: Cargo.toml
crates/rope-crypto/src/: error.rs  hash.rs  hybrid.rs  keys.rs  lib.rs  oes.rs
crates/rope-distribution/: Cargo.toml
crates/rope-distribution/src/: lib.rs
crates/rope-economics/: Cargo.toml
crates/rope-economics/src/: emission.rs  federation.rs  green_energy.rs  lib.rs  performance.rs  rewards.rs  slashing.rs  staking.rs
crates/rope-explorer/: Cargo.toml  openapi.yaml
crates/rope-explorer/src/: api.rs  db.rs  indexer.rs  main.rs  models.rs
crates/rope-federation/: Cargo.toml
crates/rope-federation/src/: lib.rs
crates/rope-loadtest/: Cargo.toml
crates/rope-loadtest/src/: lib.rs  main.rs
crates/rope-network/: Cargo.toml
crates/rope-network/src/: discovery.rs  gossip.rs  lib.rs  message.rs  peer.rs  rdp.rs  rpc.rs  swarm.rs  transport.rs
crates/rope-node/: Cargo.toml
crates/rope-node/src/: config.rs  genesis.rs  lib.rs  metrics.rs  node.rs  rpc_server.rs  string_producer.rs
crates/rope-protocols/: Cargo.toml
crates/rope-protocols/src/: erasure.rs  federation.rs  gossip.rs  lib.rs  regeneration.rs
crates/rope-security/: Cargo.toml
crates/rope-security/src/: analyzer.rs  lib.rs  monitor.rs  reputation.rs  scanner.rs
crates/rope-smartchain/: Cargo.toml
crates/rope-smartchain/src/: digital_credits.rs  governance.rs  invocation_engine.rs  lib.rs  network_config.rs  protocol_adapters.rs  security_policy.rs  testimony_agent.rs  testimony_policy.rs  tool_registry.rs
crates/rope-storage/: Cargo.toml
crates/rope-storage/src/: lib.rs
deploy/: DEPLOYMENT.md  Dockerfile.explorer  Dockerfile.indexer  Dockerfile.node  deploy-explorer.sh  deploy.sh  docker-compose.yml  env.production.example  full-deploy.sh  install-ssl-certs.sh  setup-ssl.sh  setup-vps.sh  upload-to-vps.sh  vps-bootstrap.sh
deploy/config/: node.toml
deploy/init-db/: 01-init.sql  02-federation-community.sql
deploy/nginx/: nginx.conf
deploy/nginx/conf.d/: datachain.network.conf  dcscan.io.conf  rope.network.conf
deploy/nginx/html/bridge/: index.html
deploy/nginx/html/datachain/: contact.html  index.html
deploy/nginx/html/datachain/docs/: index.html
deploy/nginx/html/dcscan/: accounts.html  agents.html  apis.html  contact.html  contracts.html  databases.html  defi.html  faucet.html  index.html  stats.html  strings.html  testimonies.html  tokens.html  tokentxns.html  txs.html  txsPending.html  validations.html  validators.html  verify.html  vote.html
deploy/nginx/html/dcscan/agents/: index.html  testimonies.html  validators.html
deploy/nginx/html/dcscan/api/: index.html
deploy/nginx/html/dcscan/blockchain/: accounts.html  contracts.html  pending.html  strings.html  transactions.html
deploy/nginx/html/dcscan/contact/: index.html
deploy/nginx/html/dcscan/faucet/: index.html
deploy/nginx/html/dcscan/network/: databoxes.html  stats.html  validators.html
deploy/nginx/html/dcscan/tokens/: index.html  transfers.html  vote.html
deploy/nginx/html/dcscan/verify/: index.html
deploy/nginx/html/faucet/: index.html
deploy/package/: datachain-rope.service  install.sh  testnet.json
deploy/ssl-certs/: README.md
docs/: ARCHITECTURE.md  IMPLEMENTATION_GAPS.md  IMPLEMENTATION_GAPS_RESOLVED.md  ROADMAP.md  TECHNICAL_ANALYSIS.md  TOKENOMICS.md  WHITEPAPER_IMPROVEMENTS.md
tests/: integration_consensus.rs  integration_crypto.rs
