[workspace]
members = [
    "crates/rope-core",
    "crates/rope-consensus",
    "crates/rope-crypto",
    "crates/rope-federation",
    "crates/rope-distribution",
    "crates/rope-protocols",
    "crates/rope-bridge",
    "crates/rope-network",
    "crates/rope-storage",
    "crates/rope-smartchain",
    "crates/rope-node",
    "crates/rope-cli",
    "crates/rope-explorer",
    "crates/rope-benchmarks",
    "crates/rope-loadtest",
    "crates/rope-economics",
    "crates/rope-agent-runtime",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Datachain Foundation DDMI <contact@datachain.one>"]
license = "Apache-2.0"
repository = "https://github.com/KazeONGUENE/rope"
rust-version = "1.75"

[workspace.dependencies]
# Async runtime
tokio = { version = "1.35", features = ["full"] }
async-trait = "0.1"
futures = "0.3"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"
prost = "0.12"
prost-types = "0.12"

# Cryptography - Classical
ring = "0.17"
ed25519-dalek = { version = "2.1", features = ["serde"] }
x25519-dalek = { version = "2.0", features = ["serde", "static_secrets"] }
blake3 = "1.5"
zeroize = { version = "1.7", features = ["derive"] }
serde_bytes = "0.11"

# Cryptography - Post-Quantum (NIST PQ-3)
pqcrypto = "0.17"
pqcrypto-dilithium = "0.5"
pqcrypto-kyber = "0.8"
pqcrypto-traits = "0.3"

# Reed-Solomon Erasure Coding
reed-solomon-erasure = "6.0"
crc32fast = "1.3"

# Networking
libp2p = { version = "0.53", features = ["tokio", "tcp", "quic", "noise", "yamux", "gossipsub", "kad", "identify", "dns", "request-response", "cbor", "macros"] }
tonic = "0.10"
tonic-build = "0.10"

# Storage
rocksdb = { version = "0.21", features = ["multi-threaded-cf"] }

# Data structures
hashbrown = { version = "0.14", features = ["serde"] }
dashmap = "5.5"
indexmap = { version = "2.1", features = ["serde"] }
bitvec = { version = "1.0", features = ["serde"] }
petgraph = { version = "0.6", features = ["serde-1"] }

# Utilities
thiserror = "1.0"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
bytes = "1.5"
hex = "0.4"
base64 = "0.21"
rand = "0.8"
rand_chacha = "0.3"
uuid = { version = "1.6", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
parking_lot = "0.12"
once_cell = "1.19"

# Configuration
config = "0.13"
clap = { version = "4.4", features = ["derive", "env"] }
toml = "0.8"

# Metrics
prometheus = "0.13"
opentelemetry = "0.21"

# Testing
proptest = "1.4"
criterion = "0.5"
mockall = "0.12"
tempfile = "3.9"

[workspace.lints.rust]
# Allow unused variables in stub/placeholder code (TODO: enable once implemented)
unused_variables = "warn"

[workspace.lints.clippy]
# Allow domain-specific naming conventions (ISO standards, crypto terms)
upper_case_acronyms = "allow"
# Allow unused imports in dev/stub code (TODO: clean up)
# These are needed for the development phase
derivable_impls = "warn"

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
panic = "abort"
strip = "symbols"

[profile.bench]
inherits = "release"
debug = true

