[package]
name = "rope-agent-runtime"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "RopeAgent Local Runtime - OpenClaw-style blockchain-native AI agents"

[dependencies]
# Internal crates
rope-core = { path = "../rope-core" }
rope-crypto = { path = "../rope-crypto" }
rope-consensus = { path = "../rope-consensus" }
rope-smartchain = { path = "../rope-smartchain" }
rope-network = { path = "../rope-network" }

# Async runtime
tokio = { workspace = true, features = ["full", "sync", "time", "macros", "rt-multi-thread"] }
async-trait = { workspace = true }
futures = "0.3"
futures-util = "0.3"

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Cryptography
blake3 = { workspace = true }
uuid = { version = "1.0", features = ["v4", "serde"] }

# Time
chrono = { workspace = true }

# HTTP client
reqwest = { version = "0.11", features = ["json", "rustls-tls"], default-features = false }

# WebSocket
tokio-tungstenite = { version = "0.21", features = ["rustls-tls-webpki-roots"] }

# Utilities
thiserror = { workspace = true }
tracing = { workspace = true }
parking_lot = { workspace = true }
dashmap = "5.5"
hex = { workspace = true }
url = "2.5"

# Directories
dirs = "5.0"

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }
tempfile = "3.0"
