[package]
name = "rope-benchmarks"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Performance benchmarks for Datachain Rope against specification requirements"

[dependencies]
# Core crates
rope-core = { path = "../rope-core" }
rope-crypto = { path = "../rope-crypto" }
rope-consensus = { path = "../rope-consensus" }
rope-network = { path = "../rope-network" }
rope-protocols = { path = "../rope-protocols" }

# Async runtime
tokio = { workspace = true, features = ["full", "test-util"] }
futures = { workspace = true }

# Benchmarking
criterion = { version = "0.5", features = ["async_tokio", "html_reports"] }

# Utilities
serde = { workspace = true }
serde_json = { workspace = true }
bincode = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
rand = { workspace = true }
blake3 = { workspace = true }
hex = { workspace = true }

# Statistics
statrs = "0.16"

[[bench]]
name = "crypto_benchmarks"
harness = false

[[bench]]
name = "consensus_benchmarks"
harness = false

[[bench]]
name = "network_benchmarks"
harness = false

[[bench]]
name = "string_benchmarks"
harness = false

[[bench]]
name = "full_system_benchmarks"
harness = false

