[package]
name = "rope-cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Command-line interface for Datachain Rope"

[[bin]]
name = "rope"
path = "src/main.rs"

[dependencies]
rope-node = { path = "../rope-node" }
rope-core = { path = "../rope-core" }
rope-crypto = { path = "../rope-crypto" }

tokio = { workspace = true }
clap = { workspace = true }
config = { workspace = true }
toml = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
hex = { workspace = true }
dirs = "5.0"
rustc_version_runtime = "0.3"
