[package]
name = "rope-economics"
version = "0.1.0"
edition = "2021"
authors = ["Datachain Foundation <contact@datachain.one>"]
description = "DC FAT tokenomics, emission schedule, and reward system for Datachain Rope"
license = "MIT OR Apache-2.0"
repository = "https://github.com/KazeONGUENE/rope"
keywords = ["blockchain", "tokenomics", "rewards", "staking", "cryptocurrency"]
categories = ["cryptography", "finance"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1.0"
parking_lot = "0.12"
blake3 = "1.5"
rand = "0.8"
log = "0.4"

[dev-dependencies]
tokio = { version = "1.0", features = ["full", "test-util"] }
