[package]
name = "rope-explorer"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "DC Explorer - Block explorer for Datachain Rope"

[[bin]]
name = "dc-explorer"
path = "src/main.rs"

[dependencies]
rope-core = { path = "../rope-core" }
rope-crypto = { path = "../rope-crypto" }

# Web framework
axum = { version = "0.7", features = ["macros"] }
tower = { version = "0.4", features = ["full"] }
tower-http = { version = "0.5", features = ["cors", "compression-gzip"] }

# Async runtime
tokio = { workspace = true }
futures = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Database
sqlx = { version = "0.7", features = ["runtime-tokio", "postgres", "chrono", "uuid"] }

# Utilities
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
chrono = { workspace = true }
uuid = { version = "1.6", features = ["v4"] }
hex = { workspace = true }
blake3 = { workspace = true }

# HTTP client for price fetching
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }

# Caching
tokio-util = { version = "0.7", features = ["time"] }

# Configuration
clap = { workspace = true }
config = { workspace = true }

