[package]
name = "rope-node"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Datachain Rope node implementation"

[dependencies]
rope-core = { path = "../rope-core" }
rope-crypto = { path = "../rope-crypto" }
rope-consensus = { path = "../rope-consensus" }
rope-network = { path = "../rope-network" }
rope-storage = { path = "../rope-storage" }

tokio = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
config = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }

