[package]
name = "rope-security"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Cerber Security AI Agent - Automated security scanning and threat detection for Datachain Rope"

[dependencies]
rope-core = { path = "../rope-core" }
rope-crypto = { path = "../rope-crypto" }

tokio = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
blake3 = { workspace = true }
hex = { workspace = true }
chrono = { workspace = true }
parking_lot = { workspace = true }
regex = "1.10"

[dev-dependencies]
tokio = { workspace = true, features = ["test-util", "macros", "rt-multi-thread"] }
