[package]
name = "rope-smartchain"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Smartchain - AI-powered testimonies and vetted tool invocation for Datachain Rope"

[dependencies]
rope-core = { path = "../rope-core" }
rope-crypto = { path = "../rope-crypto" }
rope-bridge = { path = "../rope-bridge" }
rope-consensus = { path = "../rope-consensus" }

tokio = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
blake3 = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
parking_lot = { workspace = true }
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }

